<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.welcome.WelcomeFragment">

    <!-- to show the all welcome screen in landscape UI mode with the same font sizes-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bachground"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <!-- contents that will be scrolled -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- that connect text views and image view to each other -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcometxt0"
                    style="@style/smallText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin50"
                    android:text="@string/welcomeTxt0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/shoeImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/shoe_image"
                    android:src="@drawable/welcome_shoes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcometxt0" />

                <TextView
                    android:id="@+id/welcometxt1"
                    style="@style/largTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcomeTxt1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shoeImg" />


                <TextView
                    android:id="@+id/welcometxt2"
                    style="@style/smallText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcomeTxt2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcometxt1" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/instBtn"
                style="@style/MyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                android:text="@string/inst"
                android:textColor="@color/Banafseg" />

        </LinearLayout>
    </ScrollView>

</layout>