<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!-- scroll to show all instructions then press to Go Shopping-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                style="@style/instText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginTop="@dimen/margin30"
                android:layout_marginEnd="@dimen/margin30"
                android:text="@string/instWords"
                android:textAlignment="gravity"
                android:textColor="@color/Banafseg"

                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shoeimg"
                android:src="@drawable/shoe" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/goShopBtn"
                style="@style/MyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/go_shopping" />

        </LinearLayout>
    </ScrollView>

</layout>